--- a/index.html
+++ b/index.html
@@ -17,27 +17,32 @@
 
 <body>
     <header class="header-class">
-        <nav>
+        <nav class="nav-header">
             <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
             <ul class="page-nav">
                 <!--Menu-->
+                <div class="container-header-div">
                 <li><a href="./index.html" class="nav-link">Studio</a>
-                </li>
+                </li></div>
+                <div class="container-header-div">
                 <li><a href="" class="nav-link">Portfolio</a>
-                </li>
+                </li></div>
+                <div class="container-header-div">
                 <li><a href="" class="nav-link">Contacts</a>
-                </li>
+                </li></div>
             </ul>
         </nav>
 
         <address class="address">
             <ul class="ul-kontakt">
+                <div class="container-header-div">
                 <li>
                     <a href="mailto:info@devstudio.com" class="kontakt">info@devstudio.com</a>
-                </li>
+                </li></div>
+                <div class="container-header-div">
                 <li>
                     <a href="tel:+110001111111" class="kontakt">+11 (000) 111-11-11</a>
-                </li>
+                </li></div>
             </ul>
         </address>
     </header>
