--- a/index.html
+++ b/index.html
@@ -165,9 +165,11 @@
     </main>
 
     <footer class="footer">
+        <div class="container">
         <a class="logo-footer" href="./index.html">Web<span class="logo-studio-footer">Studio</span></a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
+        </div>
     </footer>
 
 
