--- a/index.html
+++ b/index.html
@@ -17,21 +17,20 @@
 
 <body>
     <header class="header-class">
-        <nav class="nav-header">
-            <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
-            <ul class="page-nav">
+        <div class="container-header-div">
+            <nav class="nav-header">
+                <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
+                <ul class="page-nav">
                 <!--Menu-->
-                <div class="container-header-div">
                 <li><a href="./index.html" class="nav-link">Studio</a>
-                </li></div>
-                <div class="container-header-div">
+                </li>
                 <li><a href="" class="nav-link">Portfolio</a>
-                </li></div>
-                <div class="container-header-div">
+                </li>
                 <li><a href="" class="nav-link">Contacts</a>
-                </li></div>
-            </ul>
-        </nav>
+                </li>
+                </ul>
+            </nav>
+
 
         <address class="address">
             <ul class="ul-kontakt">
@@ -45,12 +44,15 @@
                 </li></div>
             </ul>
         </address>
+        </div>
     </header>
 
     <main>
         <section class="section-effective">
+            <div class="section-container">
             <h1 class="h-effective">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
+            </div>
         </section>
 
         <section class="section-about">
