--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header-class">
-        <div class="container-header-div">
+        <div class="container">
             <nav class="nav-header">
                 <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
                 <ul class="page-nav">
@@ -34,14 +34,12 @@
 
         <address class="address">
             <ul class="ul-kontakt">
-                <div class="container-header-div">
                 <li>
                     <a href="mailto:info@devstudio.com" class="kontakt">info@devstudio.com</a>
-                </li></div>
-                <div class="container-header-div">
+                </li>
                 <li>
                     <a href="tel:+110001111111" class="kontakt">+11 (000) 111-11-11</a>
-                </li></div>
+                </li>
             </ul>
         </address>
         </div>
