--- a/index.html
+++ b/index.html
@@ -47,16 +47,17 @@
 
     <main>
         <section class="section-effective">
-            <div class="section-container">
+            <div class="container">
             <h1 class="h-effective">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
             </div>
         </section>
 
         <section class="section-about">
+            <div class="container">
             <h2 class="h-about">About us</h2>
             <ul class="ul">
-                <li>
+                <li class="li-about">
                     <h3 class="h-aboutus">Strategy</h3>
                     <p class="p-aboutus">Our goal is to identify the business problem to walk away with the perfect and
                         creative solution.</p>
