--- a/index.html
+++ b/index.html
@@ -54,25 +54,25 @@
         </section>
 
         <section class="section-about">
-            <h2 class="h-about">About us</h2>
+            <h2 class="h-about visually-hidden">About us</h2>
             <ul class="ul">
-                <li>
+                <li class="li-about">
                     <h3 class="h-aboutus">Strategy</h3>
                     <p class="p-aboutus">Our goal is to identify the business problem to walk away with the perfect and
                         creative solution.</p>
                 </li>
-                <li>
+                <li class="li-about">
                     <h3 class="h-aboutus">Punctuality</h3>
                     <p class="p-aboutus">Bring the key message to the brand's audience for the best price within the
                         shortest possible time.</p>
                 </li>
-                <li>
+                <li class="li-about">
                     <h3 class="h-aboutus">Diligence</h3>
                     <p class="p-aboutus">Research and confirm brands that present the strongest digital growth
                         opportunities and minimize
                         risk.</p>
                 </li>
-                <li>
+                <li class="li-about">
                     <h3 class="h-aboutus">Technologies</h3>
                     <p class="p-aboutus">Design practice focused on digital experiences. We bring forth a deep passion
                         for problem-solving.</p>
