--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         </section>
 
         <section class="section-about">
+            <div class="container">
             <h2 class="h-about visually-hidden">About us</h2>
             <ul class="ul">
                 <li class="li-about">
@@ -78,33 +79,35 @@
                         for problem-solving.</p>
                 </li>
             </ul>
+            </div>
         </section>
 
         <section class="ourteam">
+            <div class="container">
             <h2 class="h-ourteam">Our Team</h2>
             <ul class="ul-ourteam">
-                <li class="productdesigner">
+                <li class="li-productdesigner">
                     <div class="image-container">
                         <img src="./images/img1.jpg" alt="Mark Guerrero" width="264" height="260" />
                         <h3 class="h-aboutus">Mark Guerrero</h3>
                         <p class="p-aboutus">Product Designer</p>
                     </div>
                 </li>
-                <li class="productdesigner">
+                <li class="li-productdesigner">
                     <div class="image-container">
                         <img src="./images/img2.jpg" alt="Tom Ford" width="264" height="260" />
                         <h3 class="h-aboutus">Tom Ford</h3>
                         <p class="p-aboutus">Frontend Developer</p>
                     </div>
                 </li>
-                <li class="productdesigner">
+                <li class="li-productdesigner">
                     <div class="image-container">
                         <img src="./images/img3.jpg" alt="Camila Garcia" width="264" height="260" />
                         <h3 class="h-aboutus">Camila Garcia</h3>
                         <p class="p-aboutus">Marketing</p>
                     </div>
                 </li>
-                <li class="productdesigner">
+                <li class="li-productdesigner">
                     <div class="image-container">
                         <img src="./images/img4.jpg" alt="Daniel Wilson" width="264" height="260" />
                         <h3 class="h-aboutus">Daniel Wilson</h3>
@@ -112,11 +115,13 @@
                     </div>
                 </li>
             </ul>
+            </div>
         </section>
 
         <section class="portfolio">
+            <div class="container">
             <h2 class="hh-portfolio">Our Portfolio</h2>
-            <ul>
+            <ul class="ul-portfolio">
                 <li class="li-portfolio">
                     <div class="image-container">
                         <img src="./images/img2-5.jpg" alt="Banking App" width="360" height="300" />
@@ -160,7 +165,7 @@
                     </div>
                 </li>
             </ul>
-
+            </div>
         </section>
     </main>
 
