--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
         <section class="section-effective">
-            <div class="section-container">
+            <div class="container">
             <h1 class="h-effective">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
             </div>
