--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@
             <ul class="ul-portfolio">
                 <li class="li-portfolio">
                     
-                        <img class="image-container" src="./images/img2-5.jpg" alt="Banking App" width="360" height="300" />
+                        <img class="image-container" 
+                        src="./images/img2-5.jpg" 
+                        alt="Banking App" 
+                        width="360" 
+                        height="300" />
                         <div class="image-container">
                         <h3 class="h-portfolio">Banking App</h3>
                         <p class="p-portfolio">App</p>
