--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
         <section class="section-effective">
             <div class="container">
             <h1 class="h-effective">Effective Solutions for Your Business</h1>
-            </div>
             <button class="button" type="button">Order Service</button>
-            
+            </div>
         </section>
 
         <section class="section-about">
@@ -90,7 +89,8 @@
             <ul class="ul-ourteam">
                 <li class="li-productdesigner">
                         
-                    <img src="./images/img1.jpg" alt="Mark Guerrero" width="264" height="260" />
+                    <img class="img"
+                    src="./images/img1.jpg" alt="Mark Guerrero" width="264" height="260" />
                         <div class="image-container">
                         <h3 class="h-aboutus">Mark Guerrero</h3>
                         <p class="p-aboutus">Product Designer</p>
