--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         <section class="section-effective">
             <div class="container">
             <h1 class="h-effective">Effective Solutions for Your Business</h1>
+            </div>
+            <div class="container">
             <button class="button" type="button">Order Service</button>
             </div>
         </section>
