--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
@@ -19,7 +19,7 @@
 
 <body>
     <header class="header-class">
-        <div class="container">
+        <div class="container container-two">
             <nav class="nav-header">
                 <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
                 <ul class="page-nav">
@@ -57,7 +57,7 @@
 
         <section class="section-about">
             <div class="container">
-                <h2 class="h-about visually-hidden">About us</h2>
+                <h2 class="visually-hidden">About us</h2>
                 <ul class="ull">
                 <li class="li-about">
                     <h3 class="h-aboutus">Strategy</h3>
