--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </section>
 
         <section class="portfolio">
-            <div class="container container-three">
+            <div class="container">
                 <h2 class="hh-portfolio">Our Portfolio</h2>
                 <ul class="ul-portfolio">
                 <li class="li-portfolio">
